kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-alertmanager-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: infra-alertmanager.arnoo.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: rancher-monitoring-alertmanager
                port:
                  number: 9093
